--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,7 @@
 RewriteEngine On
 RewriteBase /
 RewriteCond %{HTTP_HOST} ^www\.(.*)$ [NC]
-RewriteRule ^(.*)$ https://%1/$1 [R=301,L]
+RewriteRule ^(.*)$ http://%1/$1 [R=301,L]
 
 <IfModule mod_headers.c>
     <FilesMatch "\.(jpg|jpeg|png|gif|swf)$">
