--- a/.htaccess
+++ b/.htaccess
@@ -4,9 +4,9 @@ RewriteCond %{HTTP_HOST} ^www\.(.*)$ [NC]
 RewriteRule ^(.*)$ http://%1/$1 [R=301,L]
 
 <IfModule mod_headers.c>
-    <FilesMatch "\.(jpg|jpeg|png|gif|swf)$">
-        Header set Cache-Control "max-age=604800, public"
-    </FilesMatch>
+    # <FilesMatch "\.(jpg|jpeg|png|gif|swf)$">
+    #     Header set Cache-Control "max-age=604800, public"
+    # </FilesMatch>
 
     <FilesMatch "\.(js|css|swf)$">
         Header set Cache-Control "max-age=604800"
